--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Chakra+Petch:ital,wght@1,700&display=swap"
     rel="stylesheet">
 
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <link rel="stylesheet" href="/node_modules/leaflet/dist/leaflet.css" />
 
 
   <script>
@@ -99,19 +102,43 @@
       background: transparent;
       border: none;
     }
+
+    /* Glassmorphism Map Controls */
+    .glass-panel {
+      background: rgba(18, 18, 18, 0.7);
+      backdrop-filter: blur(12px);
+      -webkit-backdrop-filter: blur(12px);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .map-control-button {
+      width: 42px;
+      height: 42px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #E5E5E5;
+      transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+      cursor: pointer;
+    }
+
+    .map-control-button:hover {
+      background: rgba(211, 84, 0, 0.2);
+      color: #D35400;
+      transform: scale(1.05);
+    }
+
+    .map-control-button:active {
+      transform: scale(0.95);
+    }
+
+    .map-control-button.active {
+      background: #D35400;
+      color: white;
+    }
   </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@0.460.0?external=react",
-    "react-dom": "https://esm.sh/react-dom@18.3.1",
-    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
-    "react/": "https://esm.sh/react@18.3.1/",
-    "react": "https://esm.sh/react@18.3.1",
-    "recharts": "https://esm.sh/recharts@2.13.0?external=react,react-dom"
-  }
-}
-</script>
+
+
 
 </head>
 
