fix: resolve Lojista app crashes, improve customer persistence, and add defensive programming

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
               green: '#22C55E',
               amber: '#F59E0B',
               blue: '#3B82F6',
+            },
+            warm: {
+              50: '#FAF7F2',   // Creme claríssimo
+              100: '#F4EFE6',  // Café com leite suave
+              200: '#E8DFD1',  // Bege médio
+              300: '#D6C8B5',  // Sombra quente
+              500: '#8B735B',  // Texto secundário quente
+              800: '#443C35',  // Texto dark premium (café torrado)
+              900: '#2C2621',  // Destaque máximo quente
             }
           },
           backgroundImage: {
@@ -76,17 +85,17 @@
 
     /* Custom styled scrollbar */
     .scrollbar-guepardo::-webkit-scrollbar {
-      width: 6px;
+      width: 10px;
     }
 
     .scrollbar-guepardo::-webkit-scrollbar-track {
       background: rgba(255, 255, 255, 0.05);
-      border-radius: 3px;
+      border-radius: 5px;
     }
 
     .scrollbar-guepardo::-webkit-scrollbar-thumb {
       background-color: rgba(255, 255, 255, 0.2);
-      border-radius: 3px;
+      border-radius: 5px;
     }
 
     .scrollbar-guepardo::-webkit-scrollbar-thumb:hover {
