security: remover chave secreta do HTML para permitir push

--- a/conectar_whatsapp.html
+++ b/conectar_whatsapp.html
@@ -285,7 +285,7 @@
 
     <script>
         let baseUrl = 'http://localhost:8080';
-        const apikey = 'sb_secret_qHGa2O1Tfmcf_KesbX0HMg_LqX78sjL';
+        const SUPABASE_KEY = 'SUA_CHAVE_AQUI'; // Removido por segurança para push
 
         function updateBaseUrl() {
             const input = document.getElementById('api-url-input').value.trim();
