--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
               accent: '#D35400', // Branding Orange (was Yellow)
               gold: '#D35400',   // Legacy support mapped to new Orange
               orange: '#E67E22', // Secondary Brand (Lighter Orange)
+              dark: '#1a0900',   // Premium Dark Brown/Orange
+              rust: '#8B3A0F',   // Premium Rust/Orange
+              brown: {
+                light: '#5C240A',
+                dark: '#1D0B04',
+              }
             },
             status: {
               green: '#22C55E',
@@ -53,6 +59,7 @@
           },
           backgroundImage: {
             'brand-gradient': 'linear-gradient(135deg, #D35400 0%, #E67E22 100%)',
+            'brand-gradient-premium': 'linear-gradient(135deg, #5C240A 0%, #1D0B04 100%)',
             'brand-glow': 'radial-gradient(circle at center, rgba(211, 84, 0, 0.15) 0%, transparent 70%)',
           },
           boxShadow: {
@@ -64,9 +71,23 @@
     }
   </script>
   <style>
+    html,
     body {
-      background-color: #121212;
+      background: radial-gradient(ellipse at 60% 25%, #8B3A0F 0%, #4a1c06 35%, #1a0900 75%, #0a0400 100%) !important;
       color: #E5E5E5;
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+
+    #root {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      overflow: hidden;
+      background-color: transparent !important;
     }
 
     /* Custom scrollbar for history */
